fixed alignment map artist

--- a/app/assets/stylesheets/components/_banner-bar.scss
+++ b/app/assets/stylesheets/components/_banner-bar.scss
@@ -1,9 +1,10 @@
 .banner-bar {
   background: no-repeat;
   background-size:cover;
-  height: 700px;
+  height: 780px;
   padding: 150px 0;
   display: flex;
+  z-index: 1000;
   align-items: center;
   margin-top: 0px !important;
   h1  {
@@ -35,7 +36,8 @@
 .banner-index {
   background: no-repeat;
   background-size:cover;
-  height: 700px;
+  z-index: 1000;
+  height: 780px;
   padding: 150px 0;
   display: flex;
   align-items: center;
@@ -81,7 +83,8 @@ label {
 .banner-event {
   background: no-repeat;
   background-size:cover;
-  height: 700px;
+  z-index: 1000;
+  height: 780px;
   padding: 150px 0;
   display: flex;
   align-items: center;
