--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,8 +5,9 @@
   align-items: center ;
   justify-content: end ;
   height: 70px;
-  position: fixed;
-  bottom:0px;
+  position: relative;
+  bottom:-1px;
+  margin: 0px;
   padding: 0px 50px;
   // color: rgba(0,0,0,0.3);
   width: 100vw;
@@ -16,6 +17,11 @@
   .footer-copyright {
     font-size: 1em;
   }
+}
+
+body {
+  margin: 0px;
+  position: relative;
 }
 
 .footer-links {
